# tafl

./: .gitignore  Board.cpp  CMakeLists.txt  LICENCE.txt  README.txt  Tafl.cpp  build.sh  tafl.cpp  tafl.h
inc/: Board.h
src/: Board.cpp  Board.h  Field.h  Gamestate.cpp  Gamestate.h  Math.h  Tafl.cpp
